--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
           script: |
             set -e
 
-            cd /var/www/html
+            cd /var/www/testing-app
 
             git pull origin main
 
