--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,9 @@ jobs:
       - name: Deploy to VM
         uses: appleboy/ssh-action@v1
         with:
-          host: ${{ secrets.VM_HOST }}
-          username: $${ secrets.VM_USERNAME }}
-          key: ${{ secrets.VM_SSH_KEY }}
+          host: $${{ secrets.VM_HOST }}
+          username: $${{ secrets.VM_USERNAME }}
+          key: $${{ secrets.VM_SSH_KEY }}
           port: 2121
           script: |
             set -e
