--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,9 @@ jobs:
             set -e
 
             cd /var/www/web1
-
-            git pull origin main
+            
+            git fetch origin main
+            git reset --hard origin/main
 
             chmod -R 755 .
 
